--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,8 @@
     <meta content='' name='description' />
     <meta content='' name='author' />
     <meta content='width=device-width, initial-scale=1.0' name='viewport' />
-    <link href='css/style.css?v=1' media='all' rel='stylesheet' />
-    <script src='js/modernizr.min.js'></script>
+    <link href='/css/style.css?v=1' media='all' rel='stylesheet' />
+    <script src='/js/modernizr.min.js'></script>
   </head>
   <body>
     <div id='container'>
@@ -27,10 +27,10 @@
         window.jQuery || document.write("<script src='js/jquery.min.js'>\x3C/script>")
       //]]>
     </script>
-    <script src='js/plugins.js?v=1'></script>
-    <script src='js/script.js?v=1'></script>
+    <script src='/js/plugins.js?v=1'></script>
+    <script src='/js/script.js?v=1'></script>
     <!--[if lt IE 7 ]>
-      <script src='js/dd_belatedpng.js'></script>
+      <script src='/js/dd_belatedpng.js'></script>
       <script type='text/javascript'>
         //<![CDATA[
           //DD_belatedPNG.fix('img, .png_bg');
