--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,9 @@
     <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible' />
     <title>{{ page.title }}</title>
     <meta content='' name='description' />
-    <meta content='' name='author' />
+    <meta content='{{ site.author }}' name='author' />
     <meta content='width=device-width, initial-scale=1.0' name='viewport' />
+    <link rel="alternate" type="application/atom+xml" title="Feed" href="/atom.xml" />
     <link href='/css/style.css?v=1' media='all' rel='stylesheet' />
     <script src='/js/modernizr.min.js'></script>
   </head>
