--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
   <head>
     <meta charset='utf-8' />
     <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible' />
-    <title>{{ page.title }}</title>
+    <title>{% if page.title %}{{page.title}} - {% endif %}{{ site.title }}</title>
     <meta content='' name='description' />
     <meta content='{{ site.author }}' name='author' />
     <meta content='width=device-width, initial-scale=1.0' name='viewport' />
