Structure for index page.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,9 +18,24 @@
   </head>
   <body>
     <div id='container'>
-      <header></header>
+      <header id="main-header">
+        <h1>Hendy Tanata</h1>
+      </header>
+      <nav id="main-nav">
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="http://codeftw.blogspot.com">Blog</a></li>
+        </ul>
+      </nav>
+      <hr />
       <div id='main'>{{ content }}</div>
-      <footer></footer>
+      <hr />
+      <footer>
+        <ul>
+          <li class="twitter"><a href="http://twitter.com/htanata">twitter.com/htanata</a></li>
+          <li class="github"><a href="http://github.com/htanata">github.com/htanata</a></li>
+        </ul>
+      </footer>
     </div>
     <script src='//ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.js'></script>
     <script type='text/javascript'>
