Visited links should have different color.
Except in navigation.
http://www.useit.com/alertbox/20040503.html

--- a/_stylesheets/partials/_base.scss
+++ b/_stylesheets/partials/_base.scss
@@ -14,7 +14,7 @@ $link-hover-color: #036;
 
 $link-active-color: #607890;
 
-$link-visited-color: #607890;
+$link-visited-color: #acaacd;
 
 $selected-font-color: #fff;  // color for selected text
 
