Fix deprecated box-shadow usage.

--- a/_stylesheets/partials/_page.scss
+++ b/_stylesheets/partials/_page.scss
@@ -36,7 +36,7 @@ small {
 input:valid, textarea:valid {}
 input:invalid, textarea:invalid {
   @include border-radius(1px);
-  @include box-shadow(red, 0, 0, 5px, 0);
+  @include single-box-shadow(red, 0, 0, 5px, 0);
 }
 .no-boxshadow input:invalid,
 .no-boxshadow textarea:invalid { background-color: #f0dddd; }
