Change visited link color.

--- a/_stylesheets/partials/_base.scss
+++ b/_stylesheets/partials/_base.scss
@@ -14,7 +14,7 @@ $link-hover-color: #036;
 
 $link-active-color: #607890;
 
-$link-visited-color: #acaacd;
+$link-visited-color: #6e6b9b;
 
 $selected-font-color: #fff;  // color for selected text
 
