--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
     <meta content='{{ site.author }}' name='author' />
     <meta content='width=device-width, initial-scale=1.0' name='viewport' />
     <link rel="alternate" type="application/atom+xml" title="Feed" href="/atom.xml" />
+    <link href='http://fonts.googleapis.com/css?family=Josefin+Slab:light|Amaranth|Droid+Sans' rel='stylesheet' type='text/css'>
     <link href='/css/style.css?v=1' media='all' rel='stylesheet' />
     <script src='/js/modernizr.min.js'></script>
   </head>
