Make main heading a link to home.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
   <body>
     <div id='container'>
       <header id="main-header">
-        <h1>Hendy Tanata</h1>
+        <h1><a href="/">Hendy Tanata</a></h1>
       </header>
       <nav id="main-nav">
         <ul>
