--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
     <meta content='' name='description' />
     <meta content='{{ site.author }}' name='author' />
     <meta content='width=device-width, initial-scale=1.0' name='viewport' />
+    <link href="/favicon.ico?v=1" rel="shortcut icon" type="image/vnd.microsoft.icon" />
     <link rel="alternate" type="application/atom+xml" title="Feed" href="/atom.xml" />
     <link href='http://fonts.googleapis.com/css?family=Josefin+Slab:light|Amaranth|Droid+Sans' rel='stylesheet' type='text/css'>
     <link href='/css/style.css?v=1' media='all' rel='stylesheet' />
