Add "Works" section.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@
       <nav id="main-nav">
         <ul>
           <li><a href="/">Home</a></li>
+          <li><a href="/works.html">Works</a></li>
           <li><a href="http://codeftw.blogspot.com">Blog</a></li>
         </ul>
       </nav>
