--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,7 @@
           <li class="twitter"><a href="http://twitter.com/htanata">twitter.com/htanata</a></li>
           <li class="github"><a href="http://github.com/htanata">github.com/htanata</a></li>
         </ul>
+        <div id="copyright">&copy;2011 Hendy Tanata</div>
       </footer>
     </div>
     <script type="text/javascript">
