Only show underline on links on hover.

--- a/_stylesheets/partials/_page.scss
+++ b/_stylesheets/partials/_page.scss
@@ -25,9 +25,13 @@ h1, h2, h3, h4, h5, h6 {
   color: #333333;
 }
 
+a { text-decoration: none; }
 a, a:active { color: $link-color; }
 a:visited { color: $link-visited-color; }
-a:hover { color: $link-hover-color; }
+a:hover {
+  color: $link-hover-color;
+  text-decoration: underline;
+}
 
 strong, th {
   font-weight: bold;
