Thicker main-footer separator.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,8 +32,7 @@
       </nav>
       <hr />
       <div id='main'>{{ content }}</div>
-      <hr />
-      <footer>
+      <footer id="main-footer">
         <ul>
           <li class="twitter"><a href="http://twitter.com/htanata">twitter.com/htanata</a></li>
           <li class="github"><a href="http://github.com/htanata">github.com/htanata</a></li>
