--- a/_stylesheets/partials/_page.scss
+++ b/_stylesheets/partials/_page.scss
@@ -132,7 +132,11 @@ section h1 {
   color: #999;
 }
 
-footer {}
+#main-footer {
+  border-top: 4px solid #ddd;
+  margin-top: 1em;
+  padding-top: 1em;
+}
 
 .more { display: none; }
 
