--- a/_stylesheets/partials/_page.scss
+++ b/_stylesheets/partials/_page.scss
@@ -72,6 +72,7 @@ dl {
   margin: 0 0 1.5em 0;
   dt {
     font-weight: bold;
+    color: #666;
   }
 }
 
@@ -80,16 +81,24 @@ dd {
   @include font-size(12px);
 }
 
-article header {
-  margin-bottom: 1em;
-
-  h1 {
-    @include font-size(20px);
+article {
+  h1, h2 {
     font-family: 'Droid Sans', $blueprint-font-family;
   }
 
-  time {
-    @include font-size(11px);
+  h2 {
+    @include font-size(14px);
+    margin-bottom: 0.5em;
+  }
+
+  header {
+    margin-bottom: 1em;
+
+    h1 { @include font-size(20px); }
+
+    time {
+      @include font-size(11px);
+    }
   }
 }
 
