Add "Open Source" page.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,7 @@
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="/works.html">Works</a></li>
+          <li><a href="/open_source.html">Open Source</a></li>
           <li><a href="http://codeftw.blogspot.com">Blog</a></li>
         </ul>
       </nav>
