Add stackoverflow flair.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,10 +34,17 @@
       <hr />
       <div id='main'>{{ content }}</div>
       <footer id="main-footer">
-        <ul>
-          <li class="twitter"><a href="http://twitter.com/htanata">twitter.com/htanata</a></li>
-          <li class="github"><a href="http://github.com/htanata">github.com/htanata</a></li>
-        </ul>
+        <div id="footer-links">
+          <div id="stackoverflow-flair">
+            <a href="http://stackoverflow.com/users/4353/htanata">
+              <img src="http://stackoverflow.com/users/flair/4353.png" width="156" height="44" alt="profile for htanata at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for htanata at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
+            </a>
+          </div>
+          <ul>
+            <li class="twitter"><a href="http://twitter.com/htanata">twitter.com/htanata</a></li>
+            <li class="github"><a href="http://github.com/htanata">github.com/htanata</a></li>
+          </ul>
+        </div>
         <div id="copyright">&copy;2011 Hendy Tanata</div>
       </footer>
     </div>
