--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,7 +60,7 @@
         {script: "/js/script.js?v=1"}
       );
 
-      var _gaq=[["_setAccount","UA-XXXXX-X"],["_trackPageview"]];
+      var _gaq=[["_setAccount","UA-888979-5"],["_trackPageview"]];
       (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
       g.src=("https:"==location.protocol?"//ssl":"//www")+".google-analytics.com/ga.js";
       s.parentNode.insertBefore(g,s)}(document,"script"));
