Remove unused JavaScript loading.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,9 +55,7 @@
     <script type="text/javascript">
       //<![CDATA[
       head.js(
-        {jquery: "//ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"},
-        {plugin: "/js/plugins.js?v=1"},
-        {script: "/js/script.js?v=1"}
+        {jquery: "//ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"}
       );
 
       var _gaq=[["_setAccount","UA-888979-5"],["_trackPageview"]];
