Style for small screen browsers.

--- a/_stylesheets/partials/_page.scss
+++ b/_stylesheets/partials/_page.scss
@@ -154,9 +154,9 @@ section h1 {
   @include clearfix;
 }
 
-#stackoverflow-flair {
-  float: right;
-}
+#related-links { float: left; }
+
+#stackoverflow-flair { float: right; }
 
 .more { display: none; }
 
