--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,12 +35,7 @@
       <div id='main'>{{ content }}</div>
       <footer id="main-footer">
         <div id="footer-links">
-          <div id="stackoverflow-flair">
-            <a href="http://stackoverflow.com/users/4353/htanata">
-              <img src="http://stackoverflow.com/users/flair/4353.png" width="156" height="44" alt="profile for htanata at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for htanata at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
-            </a>
-          </div>
-          <ul>
+          <ul id="related-links">
             <li class="twitter"><a href="http://twitter.com/htanata">twitter.com/htanata</a></li>
             <li class="github"><a href="http://github.com/htanata">github.com/htanata</a></li>
             <li class="email">
@@ -48,6 +43,11 @@
               <noscript>Please enable JavaScript to view my email.</noscript>
             </li>
           </ul>
+          <div id="stackoverflow-flair">
+            <a href="http://stackoverflow.com/users/4353/htanata">
+              <img src="http://stackoverflow.com/users/flair/4353.png" width="156" height="44" alt="profile for htanata at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for htanata at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
+            </a>
+          </div>
         </div>
         <div id="copyright">&copy;2011 Hendy Tanata</div>
       </footer>
