DRYer layout by using config variables.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
   <body>
     <div id='container'>
       <header id="main-header">
-        <h1><a href="/">Hendy Tanata</a></h1>
+        <h1><a href="/">{{ site.title }}</a></h1>
       </header>
       <nav id="main-nav">
         <ul>
@@ -49,7 +49,7 @@
             </a>
           </div>
         </div>
-        <div id="copyright">&copy;2011 Hendy Tanata</div>
+	<div id="copyright">&copy;2011 {{ site.author }}</div>
       </footer>
     </div>
     <script type="text/javascript">
