Track outbount links.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,6 +62,14 @@
       (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
       g.src=("https:"==location.protocol?"//ssl":"//www")+".google-analytics.com/ga.js";
       s.parentNode.insertBefore(g,s)}(document,"script"));
+
+      head.ready(function() {
+        $('a[href^="http://"]').click(function() {
+          _gat._getTrackerByName()._trackEvent('outbound', this.href);
+          setTimeout('document.location = "' + this.href + '"', 100);
+          return false;
+        });
+      });
       //]]>
     </script>
     <!--[if lt IE 7 ]>
