--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     <title>{% if page.title %}{{page.title}} - {% endif %}{{ site.title }}</title>
     <meta content="{{ page.description }}" name="description" />
     <meta content='{{ site.author }}' name='author' />
-    <meta content='width=device-width, initial-scale=1.0' name='viewport' />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/favicon.ico?v=1" rel="shortcut icon" type="image/vnd.microsoft.icon" />
     <link rel="alternate" type="application/atom+xml" title="Feed" href="/atom.xml" />
     <link href='http://fonts.googleapis.com/css?family=Josefin+Slab:light|Amaranth|Droid+Sans' rel='stylesheet' type='text/css'>
@@ -19,7 +19,7 @@
     <script src='/js/head.min.js'></script>
   </head>
   <body>
-    <div id='container'>
+    <div id='container' class="container">
       <header id="main-header">
         <h1><a href="/">{{ site.title }}</a></h1>
       </header>
