--- a/_stylesheets/style.scss
+++ b/_stylesheets/style.scss
@@ -1,5 +1,5 @@
 @import "bootstrap";
-@import "bootstrap-responsive";
 
+@import "partials/responsive";
 @import "partials/page";
 @import "partials/mobile";
