--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
     <link href="/favicon.ico?v=1" rel="shortcut icon" type="image/vnd.microsoft.icon" />
     <link rel="alternate" type="application/atom+xml" title="Feed" href="/atom.xml" />
     <link href='http://fonts.googleapis.com/css?family=Josefin+Slab:light|Amaranth|Droid+Sans' rel='stylesheet' type='text/css'>
-    <link href='/css/style.css?v=1' media='all' rel='stylesheet' />
+    <link href='/css/app.css?v=1' media='all' rel='stylesheet' />
     <script src='/js/head.min.js'></script>
   </head>
   <body>
