--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/favicon.ico?v=1" rel="shortcut icon" type="image/vnd.microsoft.icon" />
     <link rel="alternate" type="application/atom+xml" title="Feed" href="/atom.xml" />
-    <link href='http://fonts.googleapis.com/css?family=Josefin+Slab:light|Amaranth|Droid+Sans' rel='stylesheet' type='text/css'>
+    <link href="http://fonts.googleapis.com/css?family=PT+Serif:700italic"
+      rel="stylesheet" type="text/css">
     <link href='/css/app.css?v=1' media='all' rel='stylesheet' />
     <script src='/js/head.min.js'></script>
   </head>
