Only use needed foundation components.

--- a/_stylesheets/app.scss
+++ b/_stylesheets/app.scss
@@ -1,8 +1,8 @@
 @import "settings";
-@import "foundation";
+// @import "foundation";
 
 // Or selectively include components
-// @import
+@import "foundation/components/type";
 //   "foundation/components/accordion",
 //   "foundation/components/alert-boxes",
 //   "foundation/components/block-grid",
