Add content container.

--- a/_stylesheets/app.scss
+++ b/_stylesheets/app.scss
@@ -4,4 +4,6 @@
 @include foundation-typography;
 
 @import "variables/colors";
+@import "base";
+@import "components/container";
 @import "components/site-title";
