Change color theme.

--- a/_stylesheets/components/_container.scss
+++ b/_stylesheets/components/_container.scss
@@ -1,7 +1,7 @@
 @import "compass/css3/box-shadow";
 
 #main {
-  background-color: $white;
+  background-color: $content-background-color;
   max-width: 50rem;
   padding: 1rem;
   margin: 0 auto;
