--- a/_stylesheets/components/_site-title.scss
+++ b/_stylesheets/components/_site-title.scss
@@ -1,4 +1,6 @@
+@import 'compass/css3/text-shadow';
+
 .site-title {
-  color: $orange;
+  color: $logo-color;
   font-family: 'Audiowide', cursive;
 }
