--- a/_stylesheets/variables/_colors.scss
+++ b/_stylesheets/variables/_colors.scss
@@ -1,5 +1,9 @@
-$orange: #ff6138;
-$yellow: #ffff9d;
-$light-green: #beeb9f;
-$medium-green: #79bd8f;
-$dark-green: #00a388;
+$red: #e74c3c;
+$white: #ecf0f1;
+$light-blue: #3498db;
+$medium-blue: #2980b9;
+$dark-blue: #2c3e50;
+
+$content-background-color: $white;
+$logo-color: $white;
+$body-color: $light-blue;
