--- a/_stylesheets/_foundation-settings.scss
+++ b/_stylesheets/_foundation-settings.scss
@@ -1,2 +1,4 @@
 $header-font-family: 'PT Serif', serif;
 $primary-color: $light-blue;
+$topbar-background: $black;
+$topbar-link-color: $light-blue;
