--- a/_stylesheets/app.scss
+++ b/_stylesheets/app.scss
@@ -3,6 +3,8 @@
 @import "foundation";
 @include foundation-global-styles;
 @include foundation-typography;
+@include foundation-menu;
+@include foundation-top-bar;
 
 @import "base";
 @import "components/container";
