--- a/_stylesheets/components/_container.scss
+++ b/_stylesheets/components/_container.scss
@@ -4,6 +4,6 @@
   background-color: $content-background-color;
   max-width: 50rem;
   padding: 1rem;
-  margin: 0 auto;
+  margin: 1rem auto;
   @include box-shadow(0 0 2px rgba(0, 0, 0, .12), 0 2px 4px rgba(0, 0, 0, .24));
 }
