--- a/_stylesheets/variables/_colors.scss
+++ b/_stylesheets/variables/_colors.scss
@@ -1,9 +1,10 @@
 $red: #e74c3c;
 $white: #ecf0f1;
+$black: #121212;
 $light-blue: #3498db;
 $medium-blue: #2980b9;
 $dark-blue: #2c3e50;
 
 $content-background-color: $white;
-$logo-color: $white;
+$logo-color: $medium-blue;
 $body-color: $light-blue;
