--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
           </div>
         </div>
       </header>
-      <div id='main'>{{ content }}</div>
+      <div class="content">{{ content }}</div>
       <footer id="main-footer">
         <div id="footer-links">
           <ul id="related-links">
