--- a/_stylesheets/app.scss
+++ b/_stylesheets/app.scss
@@ -7,5 +7,5 @@
 @include foundation-top-bar;
 
 @import "base";
-@import "components/container";
+@import "components/content";
 @import "components/site-title";
