--- a/_stylesheets/components/_content.scss
+++ b/_stylesheets/components/_content.scss
@@ -1,6 +1,6 @@
 @import "compass/css3/box-shadow";
 
-#main {
+.content {
   background-color: $content-background-color;
   max-width: 50rem;
   padding: 1rem;
