Fix variable name to reflect usage.

--- a/_stylesheets/variables/_colors.scss
+++ b/_stylesheets/variables/_colors.scss
@@ -7,4 +7,4 @@ $dark-blue: #2c3e50;
 
 $content-background-color: $white;
 $logo-color: $medium-blue;
-$body-color: $light-blue;
+$body-background-color: $light-blue;
