Use class instead of id for CSS selector.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
         </div>
       </header>
       <div class="content">{{ content }}</div>
-      <footer id="main-footer">
+      <footer class="main-footer">
         <div id="footer-links">
           <ul id="related-links">
             <li class="twitter"><a href="http://twitter.com/htanata">twitter.com/htanata</a></li>
