Use main element to indicate content.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
           </div>
         </div>
       </header>
-      <div class="content">{{ content }}</div>
+      <main class="content">{{ content }}</main>
       <footer class="main-footer">
         <div id="footer-links">
           <ul id="related-links">
