--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,12 +21,12 @@
   </head>
   <body>
     <div id='container' class="container">
-      <header>
+      <header role="banner">
         <div class="top-bar">
           <div class="top-bar-left">
             <a href="/" class="site-title">{{ site.title }}</a>
           </div>
-          <div class="top-bar-right">
+          <div role="navigation" class="top-bar-right">
             <ul class="menu">
               <li><a href="/works.html">Works</a></li>
               <li><a href="/open_source.html">Open Source</a></li>
@@ -35,8 +35,8 @@
           </div>
         </div>
       </header>
-      <main class="content">{{ content }}</main>
-      <footer class="main-footer">
+      <main role="main" class="content">{{ content }}</main>
+      <footer role="contentinfo" class="main-footer">
         <div id="footer-links">
           <ul id="related-links">
             <li class="twitter"><a href="http://twitter.com/htanata">twitter.com/htanata</a></li>
