--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,42 +20,40 @@
     <script src='/js/head.min.js'></script>
   </head>
   <body>
-    <div id='container' class="container">
-      <header role="banner">
-        <div class="top-bar">
-          <div class="top-bar-left">
-            <a href="/" class="site-title">{{ site.title }}</a>
-          </div>
-          <div role="navigation" class="top-bar-right">
-            <ul class="menu">
-              <li><a href="/works.html">Works</a></li>
-              <li><a href="/open_source.html">Open Source</a></li>
-              <li><a href="http://codeftw.blogspot.com">Blog</a></li>
-            </ul>
-          </div>
+    <header role="banner">
+      <div class="top-bar">
+        <div class="top-bar-left">
+          <a href="/" class="site-title">{{ site.title }}</a>
         </div>
-      </header>
-      <main role="main" class="content">{{ content }}</main>
-      <footer role="contentinfo" class="main-footer">
-        <div id="footer-links">
-          <ul id="related-links">
-            <li class="twitter"><a href="http://twitter.com/htanata">twitter.com/htanata</a></li>
-            <li class="github"><a href="http://github.com/htanata">github.com/htanata</a></li>
-            <li class="goodreads"><a href="https://www.goodreads.com/htanata">goodreads.com/htanata</a></li>
-            <li class="email">
-              <script type="text/javascript">eval(decodeURIComponent('%64%6f%63%75%6d%65%6e%74%2e%77%72%69%74%65%28%27%3c%61%20%68%72%65%66%3d%22%6d%61%69%6c%74%6f%3a%68%65%6e%64%79%40%74%61%6e%61%74%61%2e%6e%65%74%22%3e%68%65%6e%64%79%40%74%61%6e%61%74%61%2e%6e%65%74%3c%2f%61%3e%27%29%3b'))</script>
-              <noscript>Please enable JavaScript to view my email.</noscript>
-            </li>
+        <nav role="navigation" class="top-bar-right">
+          <ul class="menu">
+            <li><a href="/works.html">Works</a></li>
+            <li><a href="/open_source.html">Open Source</a></li>
+            <li><a href="http://codeftw.blogspot.com">Blog</a></li>
           </ul>
-          <div id="stackoverflow-flair">
-            <a href="http://stackoverflow.com/users/4353/htanata">
-              <img src="http://stackoverflow.com/users/flair/4353.png" width="156" height="44" alt="profile for htanata at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for htanata at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
-            </a>
-          </div>
+        </nav>
+      </div>
+    </header>
+    <main role="main" class="content">{{ content }}</main>
+    <footer role="contentinfo" class="main-footer">
+      <div id="footer-links">
+        <ul id="related-links">
+          <li class="twitter"><a href="http://twitter.com/htanata">twitter.com/htanata</a></li>
+          <li class="github"><a href="http://github.com/htanata">github.com/htanata</a></li>
+          <li class="goodreads"><a href="https://www.goodreads.com/htanata">goodreads.com/htanata</a></li>
+          <li class="email">
+            <script type="text/javascript">eval(decodeURIComponent('%64%6f%63%75%6d%65%6e%74%2e%77%72%69%74%65%28%27%3c%61%20%68%72%65%66%3d%22%6d%61%69%6c%74%6f%3a%68%65%6e%64%79%40%74%61%6e%61%74%61%2e%6e%65%74%22%3e%68%65%6e%64%79%40%74%61%6e%61%74%61%2e%6e%65%74%3c%2f%61%3e%27%29%3b'))</script>
+            <noscript>Please enable JavaScript to view my email.</noscript>
+          </li>
+        </ul>
+        <div id="stackoverflow-flair">
+          <a href="http://stackoverflow.com/users/4353/htanata">
+            <img src="http://stackoverflow.com/users/flair/4353.png" width="156" height="44" alt="profile for htanata at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for htanata at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
+          </a>
         </div>
-        <div id="copyright">&copy;{{ site.time | date: "%Y" }} {{ site.author }}</div>
-      </footer>
-    </div>
+      </div>
+      <div id="copyright">&copy;{{ site.time | date: "%Y" }} {{ site.author }}</div>
+    </footer>
     <script type="text/javascript">
       //<![CDATA[
       head.js(
