--- a/_stylesheets/app.scss
+++ b/_stylesheets/app.scss
@@ -9,4 +9,5 @@
 @import "base";
 @import "components/content";
 @import "components/site-title";
+@import "components/sticky-footer";
 @import "components/main-footer";
