Add style for alert messages.

--- a/_stylesheets/app.scss
+++ b/_stylesheets/app.scss
@@ -5,6 +5,7 @@
 @include foundation-typography;
 @include foundation-menu;
 @include foundation-top-bar;
+@include foundation-callout;
 
 @import "base";
 @import "components/content";
