Remove unused ids.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,8 +38,8 @@
       <main role="main" class="content">{{ content }}</main>
     </div>
     <footer role="contentinfo" class="main-footer">
-      <div id="footer-links">
-        <ul id="related-links">
+      <div>
+        <ul>
           <li class="twitter"><a href="http://twitter.com/htanata">twitter.com/htanata</a></li>
           <li class="github"><a href="http://github.com/htanata">github.com/htanata</a></li>
           <li class="goodreads"><a href="https://www.goodreads.com/htanata">goodreads.com/htanata</a></li>
@@ -48,13 +48,13 @@
             <noscript>Please enable JavaScript to view my email.</noscript>
           </li>
         </ul>
-        <div id="stackoverflow-flair">
+        <div>
           <a href="http://stackoverflow.com/users/4353/htanata">
             <img src="http://stackoverflow.com/users/flair/4353.png" width="156" height="44" alt="profile for htanata at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for htanata at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
           </a>
         </div>
       </div>
-      <div id="copyright">&copy;{{ site.time | date: "%Y" }} {{ site.author }}</div>
+      <div>&copy;{{ site.time | date: "%Y" }} {{ site.author }}</div>
     </footer>
     <script type="text/javascript">
       //<![CDATA[
