Style links on footer.

--- a/_stylesheets/app.scss
+++ b/_stylesheets/app.scss
@@ -12,3 +12,4 @@
 @import "components/site-title";
 @import "components/sticky-footer";
 @import "components/main-footer";
+@import "components/outside-links";
