Implement layout for footer.

--- a/_stylesheets/components/_outside-links.scss
+++ b/_stylesheets/components/_outside-links.scss
@@ -4,7 +4,7 @@
   $line-height: 24px;
 
   list-style: none;
-  margin-left: 1em;
+  margin-left: 0;
   line-height: $line-height;
 
   &__twitter {
