--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,8 +38,8 @@
       <main role="main" class="content">{{ content }}</main>
     </div>
     <footer role="contentinfo" class="main-footer">
-      <div>
-        <ul class="outside-links">
+      <div class="columns">
+        <ul class="outside-links columns__1">
           <li class="outside-links__twitter">
             <a href="http://twitter.com/htanata">twitter.com/htanata</a>
           </li>
@@ -54,7 +54,7 @@
             <noscript>Please enable JavaScript to view my email.</noscript>
           </li>
         </ul>
-        <div>
+        <div class="badges columns__1">
           <a href="http://stackoverflow.com/users/4353/htanata">
             <img src="http://stackoverflow.com/users/flair/4353.png" width="156" height="44" alt="profile for htanata at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for htanata at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
           </a>
