--- a/_stylesheets/app.scss
+++ b/_stylesheets/app.scss
@@ -8,8 +8,10 @@
 @include foundation-callout;
 
 @import "base";
+@import "components/columns";
 @import "components/content";
 @import "components/site-title";
 @import "components/sticky-footer";
 @import "components/main-footer";
 @import "components/outside-links";
+@import "components/badges";
