--- a/_stylesheets/mixins/_bullets.scss
+++ b/_stylesheets/mixins/_bullets.scss
@@ -1,3 +1,4 @@
+// Modified from https://github.com/Compass/compass/blob/d5df161d0df7edc686e576b22412f437dd0590cc/core/stylesheets/compass/typography/lists/_bullets.scss#L27
 @mixin pretty-bullet($bullet-icon,
                      $width: image-width($bullet-icon),
                      $height: image-height($bullet-icon),
