Style copyright text.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,7 +60,11 @@
           </a>
         </div>
       </div>
-      <div>&copy;{{ site.time | date: "%Y" }} {{ site.author }}</div>
+      <div class="text-right">
+        <small class="text-right">
+          &copy;{{ site.time | date: "%Y" }} {{ site.author }}
+        </small>
+      </div>
     </footer>
     <script type="text/javascript">
       //<![CDATA[
