Use more specific component name for footer columns.
This allows for more specific styles to be set compared to a very
generic component name.

--- a/_stylesheets/app.scss
+++ b/_stylesheets/app.scss
@@ -8,7 +8,7 @@
 @include foundation-callout;
 
 @import "base";
-@import "components/columns";
+@import "components/footer-columns";
 @import "components/content";
 @import "components/site-title";
 @import "components/sticky-footer";
