Remove blue background on small breakpoint.

--- a/_stylesheets/_base.scss
+++ b/_stylesheets/_base.scss
@@ -1,3 +1,7 @@
 html, body {
   background-color: $body-background-color;
+
+  @include breakpoint(small only) {
+    background-color: $content-background-color;
+  }
 }
