Remove ARIA roles that are implicitly set.
http://www.sitepoint.com/how-to-use-aria-effectively-with-html5/
https://www.w3.org/TR/html-aria/#sec-strong-native-semantics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,12 +20,12 @@
     <script src='/js/head.min.js'></script>
   </head>
   <body class="sticky-footer">
-    <header role="banner">
+    <header>
       <div class="top-bar">
         <div class="top-bar-left">
           <a href="/" class="site-title">{{ site.title }}</a>
         </div>
-        <nav role="navigation" class="top-bar-right">
+        <nav class="top-bar-right">
           <ul class="menu">
             <li><a href="/works.html">Works</a></li>
             <li><a href="/open_source.html">Open Source</a></li>
@@ -35,9 +35,9 @@
       </div>
     </header>
     <div class="sticky-footer__main">
-      <main role="main" class="content">{{ content }}</main>
+      <main class="content">{{ content }}</main>
     </div>
-    <footer role="contentinfo" class="main-footer">
+    <footer class="main-footer">
       <div class="footer-columns">
         <ul class="outside-links footer-columns__left">
           <li class="outside-links__twitter">
