--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/favicon.ico?v=1" rel="shortcut icon" type="image/vnd.microsoft.icon" />
     <link rel="alternate" type="application/atom+xml" title="Feed" href="/atom.xml" />
-    <link href="http://fonts.googleapis.com/css?family=PT+Serif:700italic|Audiowide"
+    <link href="https://fonts.googleapis.com/css?family=PT+Serif:700italic|Audiowide"
       rel="stylesheet" type="text/css">
     <link href='/css/app.css?v=1' media='all' rel='stylesheet' />
     <script src='/js/head.min.js'></script>
@@ -29,7 +29,7 @@
           <ul class="menu">
             <li><a href="/works.html">Works</a></li>
             <li><a href="/open_source.html">Open Source</a></li>
-            <li><a href="http://codeftw.blogspot.com">Blog</a></li>
+            <li><a href="https://codeftw.blogspot.com">Blog</a></li>
           </ul>
         </nav>
       </div>
@@ -41,10 +41,10 @@
       <div class="footer-columns">
         <ul class="outside-links footer-columns__left">
           <li class="outside-links__twitter">
-            <a href="http://twitter.com/htanata">twitter.com/htanata</a>
+            <a href="https://twitter.com/htanata">twitter.com/htanata</a>
           </li>
           <li class="outside-links__github">
-            <a href="http://github.com/htanata">github.com/htanata</a>
+            <a href="https://github.com/htanata">github.com/htanata</a>
           </li>
           <li class="outside-links__goodreads">
             <a href="https://www.goodreads.com/htanata">goodreads.com/htanata</a>
@@ -55,8 +55,8 @@
           </li>
         </ul>
         <div class="badges footer-columns__right">
-          <a href="http://stackoverflow.com/users/4353/htanata">
-            <img src="http://stackoverflow.com/users/flair/4353.png" width="208" height="58" alt="profile for htanata at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for htanata at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
+          <a href="https://stackoverflow.com/users/4353/htanata">
+            <img src="https://stackoverflow.com/users/flair/4353.png" width="208" height="58" alt="profile for htanata at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for htanata at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
           </a>
         </div>
       </div>
@@ -78,7 +78,7 @@
       s.parentNode.insertBefore(g,s)}(document,"script"));
 
       head.ready(function() {
-        $('a[href^="http://"]').click(function() {
+        $('a[href^="http"]').click(function() {
           _gat._getTrackerByName()._trackEvent('outbound', this.href);
           setTimeout('document.location = "' + this.href + '"', 100);
           return false;
