Set site-title font fallback to sans-serif.

--- a/_stylesheets/components/_site-title.scss
+++ b/_stylesheets/components/_site-title.scss
@@ -3,7 +3,7 @@
 .site-title {
   display: block;
   color: $logo-color;
-  font-family: 'Audiowide', cursive;
+  font-family: 'Audiowide', sans-serif;
   font-size: 1.5rem;
   padding: $menu-item-padding;
   padding-top: 0;
