--- a/_sass/components/_content.scss
+++ b/_sass/components/_content.scss
@@ -1,10 +1,8 @@
-@import "compass/css3/box-shadow";
-
 .content {
   background-color: $content-background-color;
   padding: 1rem;
   margin: 1rem auto;
-  @include box-shadow(0 0 2px rgba(0, 0, 0, .12), 0 2px 4px rgba(0, 0, 0, .24));
+  box-shadow: 0 0 2px rgba(0, 0, 0, .12), 0 2px 4px rgba(0, 0, 0, .24);
 
   @include breakpoint(medium) {
     max-width: 40rem;
