--- a/_sass/mixins/_bullets.scss
+++ b/_sass/mixins/_bullets.scss
@@ -1,7 +1,7 @@
 // Modified from https://github.com/Compass/compass/blob/d5df161d0df7edc686e576b22412f437dd0590cc/core/stylesheets/compass/typography/lists/_bullets.scss#L27
 @mixin pretty-bullet($bullet-icon,
-                     $width: image-width($bullet-icon),
-                     $height: image-height($bullet-icon),
+                     $width: 16px,
+                     $height: 16px,
                      $line-height: 18px,
                      $padding: 24px) {
 
