--- a/css/app.scss
+++ b/css/app.scss
@@ -1,6 +1,8 @@
+---
+---
 @import "variables/colors";
 @import "foundation-settings";
-@import "foundation";
+@import "vendor/foundation/foundation";
 @include foundation-global-styles;
 @include foundation-typography;
 @include foundation-menu;
@@ -8,6 +10,7 @@
 @include foundation-callout;
 
 @import "base";
+@import "functions/image-url";
 @import "components/footer-columns";
 @import "components/content";
 @import "components/site-title";
