Enforce HTTPS for jQuery loading.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,7 +69,7 @@
     <script type="text/javascript">
       //<![CDATA[
       head.js(
-        {jquery: "//ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"}
+        {jquery: "https://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"}
       );
 
       var _gaq=[["_setAccount","UA-888979-5"],["_trackPageview"]];
