Add styles for syntax highlight.

--- a/css/app.scss
+++ b/css/app.scss
@@ -12,6 +12,7 @@
 @import "base";
 @import "functions/image-url";
 @import "components/footer-columns";
+@import "components/highlight";
 @import "components/content";
 @import "components/site-title";
 @import "components/sticky-footer";
