--- a/_sass/_foundation-settings.scss
+++ b/_sass/_foundation-settings.scss
@@ -1,7 +1,7 @@
 $header-font-family: 'PT Serif', serif;
 $primary-color: $light-blue;
-$topbar-background: $black;
-$topbar-link-color: $light-blue;
+$topbar-background: $dark-blue;
+$topbar-link-color: $cloud-white;
 
 $header-sizes: (
   small: (
