--- a/_sass/components/_main-footer.scss
+++ b/_sass/components/_main-footer.scss
@@ -1,5 +1,5 @@
 .main-footer {
-  background-color: $black;
+  background-color: $dark-blue;
   color: $white;
   padding: 1rem;
   font-size: 0.92rem;
