--- a/_sass/variables/_colors.scss
+++ b/_sass/variables/_colors.scss
@@ -4,7 +4,8 @@ $black: #121212;
 $light-blue: #3498db;
 $medium-blue: #2980b9;
 $dark-blue: #2c3e50;
+$cloud-white: #ecf0f1;
 
 $content-background-color: $white;
-$logo-color: $medium-blue;
+$logo-color: $cloud-white;
 $body-background-color: $light-blue;
